SVN_SILENT made messages (.desktop file)

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -36,6 +36,10 @@ Name[pt_BR]=DBUSCalendar
 Name[ro]=CalendarDBUS
 Name[ru]=DBUSCalendar
 Name[sl]=DBUSCalendar
+Name[sr]=Д‑бус‑календар
+Name[sr@ijekavian]=Д‑бус‑календар
+Name[sr@ijekavianlatin]=DBUSCalendar
+Name[sr@latin]=DBUSCalendar
 Name[sv]=DBus-kalender
 Name[tr]=DBUSCalendar
 Name[uk]=DBUSCalendar
@@ -79,6 +83,10 @@ Comment[pt_BR]=Organizador com interface D-Bus
 Comment[ro]=Organizator cu interfață D-Bus
 Comment[ru]=Органайзер с интерфейсом D-Bus
 Comment[sl]=Organizator z vmesnikom D-Bus
+Comment[sr]=Организатор са д‑бус сучељем
+Comment[sr@ijekavian]=Организатор са д‑бус сучељем
+Comment[sr@ijekavianlatin]=Organizator sa D‑Bus sučeljem
+Comment[sr@latin]=Organizator sa D‑Bus sučeljem
 Comment[sv]=Filofax med D-Bus gränssnitt
 Comment[tr]=D-Bus arayüzü kullanan Düzenleyici
 Comment[uk]=Тижневик з інтерфейсом D-Bus
