--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -34,6 +34,10 @@ Name[pt_BR]=Interface do componente do KOrganizer
 Name[ro]=Interfață Componentă KOrganizer
 Name[ru]=Компонент органайзера
 Name[sl]=KOrganizerjev vmesnik za Dele
+Name[sr]=Сучеље К‑организатора дела
+Name[sr@ijekavian]=Сучеље К‑организатора дијела
+Name[sr@ijekavianlatin]=Sučelje K‑organizatora dijela
+Name[sr@latin]=Sučelje K‑organizatora dela
 Name[sv]=Korganizers delgränssnitt
 Name[tr]=KOrganizer Part Arayüzü
 Name[uk]=Інтерфейс складової KOrganizer
@@ -95,6 +99,10 @@ Comment[ru]=Компонент органайзера
 Comment[se]=KOrganizer-oassi
 Comment[sk]=Part KOrganizer
 Comment[sl]=Del KOrganizerja
+Comment[sr]=К‑организатор део
+Comment[sr@ijekavian]=К‑организатор дио
+Comment[sr@ijekavianlatin]=K‑organizator dio
+Comment[sr@latin]=K‑organizator deo
 Comment[sv]=Korganizer-del
 Comment[ta]=கேஅமைப்பாளர் பகுதி
 Comment[tg]=Қисмати органайзер
