--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -64,6 +64,10 @@ Name[ru]=Дополнительные поля
 Name[se]=Iežat siiddut
 Name[sk]=Vlastné stránky
 Name[sl]=Prilagojene strani
+Name[sr]=Посебне странице
+Name[sr@ijekavian]=Посебне странице
+Name[sr@ijekavianlatin]=Posebne stranice
+Name[sr@latin]=Posebne stranice
 Name[sv]=Egna sidor
 Name[ta]=தனிபயன் பக்கங்கள்
 Name[tg]=Варақаҳои замимавии истифодашаванда
@@ -124,6 +128,10 @@ Comment[ru]=Настройка дополнительных полей
 Comment[se]=Heivet iežat siidduid
 Comment[sk]=Nastavenie vlastných stránok
 Comment[sl]=Nastavi prilagojene strani
+Comment[sr]=Подешавање посебних страница
+Comment[sr@ijekavian]=Подешавање посебних страница
+Comment[sr@ijekavianlatin]=Podešavanje posebnih stranica
+Comment[sr@latin]=Podešavanje posebnih stranica
 Comment[sv]=Anpassa egna sidor
 Comment[ta]=தனிபயன் பக்கங்களை கட்டமை
 Comment[tg]=Танзимоти варақаҳои замимавии истифодашаванда
