--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -63,6 +63,10 @@ Name[ro]=Liber/ocupat
 Name[ru]=Занятое время
 Name[sk]=Voľný čas
 Name[sl]=Prost/zaseden
+Name[sr]=Слободно/заузето
+Name[sr@ijekavian]=Слободно/заузето
+Name[sr@ijekavianlatin]=Slobodno/zauzeto
+Name[sr@latin]=Slobodno/zauzeto
 Name[sv]=Ledig/upptagen
 Name[ta]=சுதந்திரமான/வேலையில் இருக்கும்
 Name[tg]=Озод/машғул аст
@@ -122,6 +126,10 @@ Comment[pt_BR]=Configuração de disponibilidade do KOrganizer
 Comment[ru]=Настройка свободного и занятого времени
 Comment[sk]=Nastavenie voľného času pre KOrganizer
 Comment[sl]=Nastavitev prost/zaseden za KOrganizer
+Comment[sr]=Подешавање слободног/заузетог у К‑организатору
+Comment[sr@ijekavian]=Подешавање слободног/заузетог у К‑организатору
+Comment[sr@ijekavianlatin]=Podešavanje slobodnog/zauzetog u K‑organizatoru
+Comment[sr@latin]=Podešavanje slobodnog/zauzetog u K‑organizatoru
 Comment[sv]=Inställning av ledig/upptagen i Korganizer
 Comment[ta]=கேஅமைப்பாளர்,சுதந்திரமான/செயலிலுள்ள கட்டமைப்பு
 Comment[tg]=Танзимоти вақти озоди органайзери KDE
