--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -135,6 +135,10 @@ Comment[ru]=Общие параметры
 Comment[se]=Korganizer, váldoheivehusat
 Comment[sk]=Hlavné nastavenie KOrganizer
 Comment[sl]=Glavne nastavitve KOrganizerja
+Comment[sr]=Главно подешавање К‑организатора
+Comment[sr@ijekavian]=Главно подешавање К‑организатора
+Comment[sr@ijekavianlatin]=Glavno podešavanje K‑organizatora
+Comment[sr@latin]=Glavno podešavanje K‑organizatora
 Comment[sv]=Korganizers huvudinställning
 Comment[ta]=கேஅமைப்பாளர் முக்கிய கட்டமைப்பு
 Comment[tg]=Танзимотҳои умумии органайзер-KDE
