--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -66,6 +66,10 @@ Name[ro]=Module
 Name[ru]=Модули
 Name[sk]=Moduly
 Name[sl]=Vstavki
+Name[sr]=Прикључци
+Name[sr@ijekavian]=Прикључци
+Name[sr@ijekavianlatin]=Priključci
+Name[sr@latin]=Priključci
 Name[sv]=Insticksprogram
 Name[ta]=சொருகுப்பொருள்கள்
 Name[th]=โปรแกรมเสริม
@@ -127,6 +131,10 @@ Comment[ro]=Configurare module KOrganizer
 Comment[ru]=Настройка модулей
 Comment[sk]=Nastavenie modulu KOrganizer
 Comment[sl]=Nastavitve vstavka KOrganizerja
+Comment[sr]=Подешавање прикључака у К‑организатору
+Comment[sr@ijekavian]=Подешавање прикључака у К‑организатору
+Comment[sr@ijekavianlatin]=Podešavanje priključaka u K‑organizatoru
+Comment[sr@latin]=Podešavanje priključaka u K‑organizatoru
 Comment[sv]=Korganizers inställning av insticksprogram
 Comment[ta]=கேஅமைப்பாளர் சொருகுப்பொருள் வடிவமைப்பு
 Comment[tr]=KOrganizer Eklenti Yapılandırması
