--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -67,6 +67,10 @@ Name[ru]=Представления
 Name[se]=Čájeheamit
 Name[sk]=Pohľady
 Name[sl]=Prikazi
+Name[sr]=Прикази
+Name[sr@ijekavian]=Прикази
+Name[sr@ijekavianlatin]=Prikazi
+Name[sr@latin]=Prikazi
 Name[sv]=Vyer
 Name[ta]=காட்சிகள்
 Name[tg]=Намудҳо
@@ -128,6 +132,10 @@ Comment[ro]=Configurare vizualizări KOrganizer
 Comment[ru]=Настройка представлений календаря
 Comment[sk]=Nastavenie pohľadov pre KOrganizer
 Comment[sl]=Nastavitev prikaza KOrganizerja
+Comment[sr]=Подешавање прика̂за у К‑организатору
+Comment[sr@ijekavian]=Подешавање прика̂за у К‑организатору
+Comment[sr@ijekavianlatin]=Podešavanje prikâ̂za u K‑organizatoru
+Comment[sr@latin]=Podešavanje prikâ̂za u K‑organizatoru
 Comment[sv]=Inställning av Korganizers vyer
 Comment[ta]=கேஅமைப்பாளர் காட்சி கட்டமைப்பு
 Comment[tg]=Танзимоти намудҳои органайзери KDE
