--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -7,6 +7,7 @@ Name[de]=Erinnerungsmodul
 Name[en_GB]=Reminder Dæmon
 Name[es]=Demonio de recordatorio
 Name[et]=Meeldetuletuste deemon
+Name[fr]=Démon d'alarme
 Name[gl]=Daemon do servizo de lembranzas
 Name[hr]=Podsjetnik
 Name[ia]=Demone de Memento
@@ -22,6 +23,10 @@ Name[pa]=ਰੀਮਾਈਡਰ ਡੈਮਨ
 Name[pt]=Servidor de Chamadas de Atenção
 Name[pt_BR]=Servidor de Lembretes
 Name[sl]=Pritajeni program za opomnike
+Name[sr]=Демон подсетника
+Name[sr@ijekavian]=Демон подсјетника
+Name[sr@ijekavianlatin]=Demon podsjetnika
+Name[sr@latin]=Demon podsetnika
 Name[sv]=Påminnelsedemon
 Name[tr]=Hatırlatma Servisi
 Name[uk]=Фонова служба нагадування
@@ -35,6 +40,7 @@ Comment[de]=Erinnerungsdienst für Ereignisse und Termine
 Comment[en_GB]=Event and task reminder dæmon
 Comment[es]=Demonio de recordatorio de eventos y tareas
 Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
+Comment[fr]=Démon de rappel des tâches et évènements
 Comment[gl]=Daemon que lembra de eventos e tarefas
 Comment[hr]=Servis za događanja i podsjetnik na zadatke
 Comment[ia]=Demone de memento pro carga e evento
@@ -48,6 +54,10 @@ Comment[nl]=Herinneringsdaemon voor evenementen en taken
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
 Comment[pt_BR]=Servidor de lembretes dos eventos e tarefas
 Comment[sl]=Pritajeni program za opomnike glede dogodkov in opravil
+Comment[sr]=Демон за подсећање на догађаје и задатке
+Comment[sr@ijekavian]=Демон за подсјећање на догађаје и задатке
+Comment[sr@ijekavianlatin]=Demon za podsjećanje na događaje i zadatke
+Comment[sr@latin]=Demon za podsećanje na događaje i zadatke
 Comment[sv]=Påminnelsedemon för händelser och uppgifter
 Comment[tr]=Olay ve iş hatırlatma servisi
 Comment[uk]=Фонова служба нагадування про події і завдання
