--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -46,6 +46,10 @@ Name[pt_BR]=Plug-in de números de datas para calendários
 Name[ru]=День в году
 Name[sk]=Modul dátumov pre kalendáre
 Name[sl]=Datumski vstavek za koledarje
+Name[sr]=Прикључак календара за бројеве датума
+Name[sr@ijekavian]=Прикључак календара за бројеве датума
+Name[sr@ijekavianlatin]=Priključak kalendara za brojeve datuma
+Name[sr@latin]=Priključak kalendara za brojeve datuma
 Name[sv]=Datuminsticksprogram för kalendrar
 Name[ta]=நாள்காட்டிகளுக்கான தேதி எண்களின் சொருகுப்பொருள்
 Name[tg]=Санаҳои тақвим
@@ -95,6 +99,10 @@ Comment[pt_BR]=Para cada dia, esse plug-in mostra o número do dia no topo da vi
 Comment[ru]=Этот модуль показывает номер дня в году для каждой даты. Например, для 1 февраля будет показан номер 32.
 Comment[sk]=Tento modul pre každý deň zobrazí jeho číslo dňa v roku navrchu pohľadu agendy. Napríklad 1. február je deň číslo 32 v roku.
 Comment[sl]=Za vsak dan ta vstavek prikazuje številko dneva v letu na vrhu praikaza agende. Npr., 1. februar je 32. dan v letu.
+Comment[sr]=Овај прикључак приказује број у години за сваки дан, при врху приказа распореда. На пример, 1. фебруар је 32. дан у години.
+Comment[sr@ijekavian]=Овај прикључак приказује број у години за сваки дан, при врху приказа распореда. На примјер, 1. фебруар је 32. дан у години.
+Comment[sr@ijekavianlatin]=Ovaj priključak prikazuje broj u godini za svaki dan, pri vrhu prikaza rasporeda. Na primjer, 1. februar je 32. dan u godini.
+Comment[sr@latin]=Ovaj priključak prikazuje broj u godini za svaki dan, pri vrhu prikaza rasporeda. Na primer, 1. februar je 32. dan u godini.
 Comment[sv]=Insticksprogrammet visar dagens nummer under året för varje dag längst upp i agendavyn. Till exempel är 1:a februari den 32:e dagen under året.
 Comment[ta]=ஒவ்வோரு நாளும் நிகழ்ச்சி நிரல் காட்சியின் மேற்புறத்தில் வருடத்தின் நாளின் எண்ணை இந்த சொருகுப்பொருள் காட்டுகிறது. உதாரணமாக, பிப்ரவரி 1 வருடத்தின் 32வது நாள்
 Comment[tr]=Bu eklenti, her gün için tarih bilgisini gün sayısı olarak ajanda görünümünün yukarısında gösterir. Örneğin, 1 Şubat yılın 32. günüdür.
