--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -48,6 +48,10 @@ Name[ro]=Modul calendar evreiesc
 Name[ru]=Еврейский календарь
 Name[sk]=Modul Židovského kalendára
 Name[sl]=Vstavek za židovski koledar
+Name[sr]=Прикључак јеврејског календара
+Name[sr@ijekavian]=Прикључак јеврејског календара
+Name[sr@ijekavianlatin]=Priključak jevrejskog kalendara
+Name[sr@latin]=Priključak jevrejskog kalendara
 Name[sv]=Insticksprogram för judisk kalender
 Name[ta]=ஜூவிஷ் நாள்காட்டி சொருகுப்பொருள்
 Name[tg]=Тақвимоти яҳудӣ
@@ -91,6 +95,10 @@ Comment[pt]=Mostra todas as datas no KOrganizer também no sistema de calendári
 Comment[pt_BR]=Mostra todas as datas no KOrganizer também no sistema de calendário judaico.
 Comment[ru]=Показывать все даты по еврейскому календарю.
 Comment[sl]=Prikaže vse datume v KOrganizerju tudi v židovskem koledarskem sistemu.
+Comment[sr]=Приказује све датуме у К‑организатору и по јеврејском календару.
+Comment[sr@ijekavian]=Приказује све датуме у К‑организатору и по јеврејском календару.
+Comment[sr@ijekavianlatin]=Prikazuje sve datume u K‑organizatoru i po jevrejskom kalendaru.
+Comment[sr@latin]=Prikazuje sve datume u K‑organizatoru i po jevrejskom kalendaru.
 Comment[sv]=Visar också alla datum i Korganizer enligt den judiska kalendern.
 Comment[tr]=KOrganizer içerisindeki tüm tarihleri İbrani takvimine göre gösterir.
 Comment[uk]=Показує всі дати в korganizer також і в системі єврейського календаря.
