--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -37,6 +37,10 @@ Name[pt]='Plugin' de Imagem do Dia do Wikipédia para Calendários
 Name[pt_BR]=Plug-in de Imagem do Dia da Wikipédia para Calendários
 Name[ru]=Изображение дня с Wikipedia для календаря
 Name[sl]=Vstavek za Wikipedijin »Slika dneva« za koledarje
+Name[sr]=Прикључак календара за Википедијину слику дана
+Name[sr@ijekavian]=Прикључак календара за Википедијину слику дана
+Name[sr@ijekavianlatin]=Priključak kalendara za Wikipedijinu sliku dana
+Name[sr@latin]=Priključak kalendara za Wikipedijinu sliku dana
 Name[sv]=Insticksprogram för kalendrar med 'Dagens bild' från Wikipedia
 Name[tr]=Takvimler için Wikipedia Günün Resmi Eklentisi
 Name[uk]=Додаток дат для календарів (зображення дня з Вікіпедії)
@@ -76,6 +80,10 @@ Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
 Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipédia
 Comment[ru]=Изображение дня с Wikipedia для календаря
 Comment[sl]=Ta vstavek ponuja sliko dneva z Wikipedije
+Comment[sr]=Прикључак за добављање Википедијине слике дана
+Comment[sr@ijekavian]=Прикључак за добављање Википедијине слике дана
+Comment[sr@ijekavianlatin]=Priključak za dobavljanje Wikipedijine slike dana
+Comment[sr@latin]=Priključak za dobavljanje Wikipedijine slike dana
 Comment[sv]=Insticksprogrammet tillhandahåller Wikipedias 'Dagens bild'
 Comment[tr]=Bu eklenti Wikipedia Günün Resmini getirir
 Comment[uk]=Цей додаток працює з «Зображеннями дня» з Вікіпедії
