--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -46,6 +46,10 @@ Name[pt_BR]=Estilo de impressão de diário
 Name[ru]=Печать дневника
 Name[sk]=Štýl tlače žurnálu
 Name[sl]=Dnevniški slog tiskanja
+Name[sr]=Стил штампања по дневнику
+Name[sr@ijekavian]=Стил штампања по дневнику
+Name[sr@ijekavianlatin]=Stil štampanja po dnevniku
+Name[sr@latin]=Stil štampanja po dnevniku
 Name[sv]=Journal-utskriftsstil
 Name[ta]=செய்தி அச்சுப்பாணி
 Name[tr]=Günlük Yazdırma Tarzı
@@ -96,6 +100,10 @@ Comment[pt_BR]=Este plug-in permite-lhe imprimir entradas de diário.
 Comment[ru]=Этот модуль позволяет печатать дневник.
 Comment[sk]=Tento modul umožní vytlačiť položky žurnálu (denníkové položky).
 Comment[sl]=Ta vstavek vam omogoča natis vnosov v dnevnik.
+Comment[sr]=Помоћу овог прикључка можете да одштампате уносе из дневника.
+Comment[sr@ijekavian]=Помоћу овог прикључка можете да одштампате уносе из дневника.
+Comment[sr@ijekavianlatin]=Pomoću ovog priključka možete da odštampate unose iz dnevnika.
+Comment[sr@latin]=Pomoću ovog priključka možete da odštampate unose iz dnevnika.
 Comment[sv]=Det här insticksprogrammet gör att du kan skriva ut journalanteckningar (dagboksanteckningar).
 Comment[ta]=இந்த சொருகுப்பொருள் இதழ் உள்ளீடுகளை அச்சிட உங்களை அனுமதிக்கிறது (நாள் குறிப்பேடு உள்ளீடுகள்).
 Comment[tr]=Bu eklenti, günlük girişlerinizi yazıcıdan çıkartmanızı sağlar.
