--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -46,6 +46,10 @@ Name[pt_BR]=Estilo de impressão em lista
 Name[ru]=Список событий и задач
 Name[sk]=Štýl tlače zoznamu
 Name[sl]=Slog tiskanja v obliki list
+Name[sr]=Стил штампања по списку
+Name[sr@ijekavian]=Стил штампања по списку
+Name[sr@ijekavianlatin]=Stil štampanja po spisku
+Name[sr@latin]=Stil štampanja po spisku
 Name[sv]=List-utskriftsstil
 Name[ta]=அச்சு பாணியை பட்டியலிடு
 Name[tr]=Liste Yazdırma Tarzı
@@ -95,6 +99,10 @@ Comment[pt_BR]=Este plug-in permite-lhe imprimir eventos e tarefas em forma de l
 Comment[ru]=Этот модуль позволяет печатать список событий и задач.
 Comment[sk]=Tento modul umožní vytlačiť udalosti a úlohy vo forme zoznamu.
 Comment[sl]=Ta vstavek vam omogoča natis dogodkov in čakajočih opravil v obliki seznama.
+Comment[sr]=Помоћу овог прикључка можете да одштампате догађаје и обавезе у облику списка.
+Comment[sr@ijekavian]=Помоћу овог прикључка можете да одштампате догађаје и обавезе у облику списка.
+Comment[sr@ijekavianlatin]=Pomoću ovog priključka možete da odštampate događaje i obaveze u obliku spiska.
+Comment[sr@latin]=Pomoću ovog priključka možete da odštampate događaje i obaveze u obliku spiska.
 Comment[sv]=Det här insticksprogrammet gör att du kan skriva ut händelser och uppgifter i en lista.
 Comment[ta]=இந்த சொருகுப்பொருள் பட்டியல் படிவத்தில் உள்ள செய்திகள் மற்றும் செய்யவேண்டியவைகளை அச்சிட உங்களை அனுமதிக்கிறது.
 Comment[tr]=Bu eklenti, olayları ve yapılacaklar listesini bir liste biçiminde yazdırmanızı sağlar.
