--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -42,6 +42,10 @@ Name[pt_BR]=Estilo de impressão anual
 Name[ru]=Календарь на год
 Name[sk]=Štýl tlače pre rok
 Name[sl]=Letni slog tiskanja
+Name[sr]=Стил штампања по години
+Name[sr@ijekavian]=Стил штампања по години
+Name[sr@ijekavianlatin]=Stil štampanja po godini
+Name[sr@latin]=Stil štampanja po godini
 Name[sv]=Årlig utskriftsstil
 Name[tr]=Yıllık Yazdırma Biçimi
 Name[uk]=Стиль друку щорічником
@@ -89,6 +93,10 @@ Comment[pt_BR]=Esse plug-in permite-lhe imprimir um calendário anual.
 Comment[ru]=Этот модуль позволяет печатать календарь на год.
 Comment[sk]=Tento modul vám umožní vytlačiť kalendár na rok.
 Comment[sl]=Ta vstavek vam omogoča natis letnega koledarja.
+Comment[sr]=Помоћу овог прикључка можете да одштампате годишњи календар.
+Comment[sr@ijekavian]=Помоћу овог прикључка можете да одштампате годишњи календар.
+Comment[sr@ijekavianlatin]=Pomoću ovog priključka možete da odštampate godišnji kalendar.
+Comment[sr@latin]=Pomoću ovog priključka možete da odštampate godišnji kalendar.
 Comment[sv]=Det här insticksprogrammet gör att du kan skriva ut en årlig kalender.
 Comment[tr]=Bu eklenti takvimi yıllık olarak yazdırmanızı sağlar.
 Comment[uk]=Цей журнал надає можливість друкувати щорічний календар.
