--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -35,6 +35,10 @@ Name[pt]='Plugin' do Wikipédia para 'Aconteceu neste dia'
 Name[pt_BR]=Plug-in de 'Este Dia na História' da Wikipédia
 Name[ru]=Показ блока «В этот день» с Wikipedia
 Name[sl]=Vstavek za Wikipedijin »Na današnji dan«
+Name[sr]=Прикључак за Википедијино „догодило се на данашњи дан“
+Name[sr@ijekavian]=Прикључак за Википедијино „догодило се на данашњи дан“
+Name[sr@ijekavianlatin]=Priključak za Wikipedijino „dogodilo se na današnji dan“
+Name[sr@latin]=Priključak za Wikipedijino „dogodilo se na današnji dan“
 Name[sv]=Insticksprogram med 'Den här dagen i historien' från Wikipedia
 Name[tr]=Wikipedia 'Tarihte Bugün' Eklentisi
 Name[uk]=Додаток сторінки Вікіпедії «Цей день в історії»
@@ -73,6 +77,10 @@ Comment[pt]=Este 'plugin' oferece referências às páginas do Wikipédia sobre 
 Comment[pt_BR]=Este plug-in fornece links para as páginas do 'Este Dia na História' da Wikipédia
 Comment[ru]=Показ блока «В этот день» с Wikipedia
 Comment[sl]=Ta vstavek ponuja povezave na Wikipedijino stran »Na današnji dan«
+Comment[sr]=Овај прикључак добавља везе ка Википедијиним страницама „догодило се на данашњи дан“
+Comment[sr@ijekavian]=Овај прикључак добавља везе ка Википедијиним страницама „догодило се на данашњи дан“
+Comment[sr@ijekavianlatin]=Ovaj priključak dobavlja veze ka Wikipedijinim stranicama „dogodilo se na današnji dan“
+Comment[sr@latin]=Ovaj priključak dobavlja veze ka Wikipedijinim stranicama „dogodilo se na današnji dan“
 Comment[sv]=Insticksprogrammet tillhandahåller länkar till Wikipedias sida 'Den här dagen i historien'
 Comment[tr]=Bu eklenti, Wikipedia 'Tarihte Bugün' sayfalarına bağlantı sağlar
 Comment[uk]=Цей додаток працює з посиланнями на сторінки Вікіпедії «Цей день в історії»
