--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -33,6 +33,10 @@ Name[pt]=Interface do 'Plugin' de Impressão do KOrganizer
 Name[pt_BR]=Interface do plug-in de impressão do KOrganizer
 Name[ru]=Печать календаря
 Name[sl]=KOrganizerjev vmesnik za tiskalniške vstavke
+Name[sr]=Сучеље К‑организаторовог прикључка за штампање
+Name[sr@ijekavian]=Сучеље К‑организаторовог прикључка за штампање
+Name[sr@ijekavianlatin]=Sučelje K‑organizatorovog priključka za štampanje
+Name[sr@latin]=Sučelje K‑organizatorovog priključka za štampanje
 Name[sv]=Insticksprogram för Korganizers utskriftsgränssnitt
 Name[tr]=KOrganizer Yazdırma Eklentisi Arayüzü
 Name[uk]=Інтерфейс додатка друку KOrganizer
@@ -94,6 +98,10 @@ Comment[ru]=Компонент органайзера
 Comment[se]=KOrganizer-oassi
 Comment[sk]=Part KOrganizer
 Comment[sl]=Del KOrganizerja
+Comment[sr]=К‑организатор део
+Comment[sr@ijekavian]=К‑организатор дио
+Comment[sr@ijekavianlatin]=K‑organizator dio
+Comment[sr@latin]=K‑organizator deo
 Comment[sv]=Korganizer-del
 Comment[ta]=கேஅமைப்பாளர் பகுதி
 Comment[tg]=Қисмати органайзер
