--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -49,6 +49,10 @@ Name[pt_BR]=Fontes e cores
 Name[ro]=Culori și fonturi
 Name[ru]=Цвета и шрифты
 Name[sl]=Barve in pisave
+Name[sr]=Боје и фонтови
+Name[sr@ijekavian]=Боје и фонтови
+Name[sr@ijekavianlatin]=Boje i fontovi
+Name[sr@latin]=Boje i fontovi
 Name[sv]=Färger och teckensnitt
 Name[th]=สีและแบบอักษร
 Name[tr]=Renkler ve Yazı Tipleri
@@ -93,6 +97,10 @@ Comment[pt_BR]=Configuração de fontes e cores do KOrganizer
 Comment[ro]=Configurare culori și fonturi KOrganizer
 Comment[ru]=Настройка цветов и шрифтов календаря
 Comment[sl]=Nastavitev barv in pisav v KOrganizerju
+Comment[sr]=Подешавање боја и фонтова у К‑организатору
+Comment[sr@ijekavian]=Подешавање боја и фонтова у К‑организатору
+Comment[sr@ijekavianlatin]=Podešavanje boja i fontova u K‑organizatoru
+Comment[sr@latin]=Podešavanje boja i fontova u K‑organizatoru
 Comment[sv]=Inställning av Korganizers färger och teckensnitt
 Comment[tr]=KOrganizer Renk ve Yazı Tipi Yapılandırması
 Comment[uk]=Налаштування кольорів і шрифтів у KOrganizer
