--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -62,6 +62,10 @@ Name[ru]=Календарь группы
 Name[se]=Joavkoplánen
 Name[sk]=Skupinové plánovanie
 Name[sl]=Razporejanje skupin
+Name[sr]=Распоређивање група
+Name[sr@ijekavian]=Распоређивање група
+Name[sr@ijekavianlatin]=Raspoređivanje grupa
+Name[sr@latin]=Raspoređivanje grupa
 Name[sv]=Gruppschemaläggning
 Name[ta]=குழு திட்ட வரையறை
 Name[tg]=Ҷадвали гурӯҳҳо
@@ -118,6 +122,10 @@ Comment[ru]=Настройка календаря группы
 Comment[se]=KOrganizer, joavkoplánema heivehusat
 Comment[sk]=Nastavenie skupinového plánovania pre KOrganizer
 Comment[sl]=Nastavitev razporejanja skupin v KOrganizerju
+Comment[sr]=Подешавање распоређивања група у К‑организатору
+Comment[sr@ijekavian]=Подешавање распоређивања група у К‑организатору
+Comment[sr@ijekavianlatin]=Podešavanje raspoređivanja grupa u K‑organizatoru
+Comment[sr@latin]=Podešavanje raspoređivanja grupa u K‑organizatoru
 Comment[sv]=Inställning av Korganizers gruppschemaläggning
 Comment[ta]=கேஅமைப்பாளர் குழு நேர அமைப்புக்கான கட்டமைப்பு
 Comment[tg]=Танзимоти ҷадвали гурӯҳҳои органайзер-KDE
