--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -52,6 +52,10 @@ Name[pt_BR]=Data e hora
 Name[ro]=Oră și dată
 Name[ru]=Дата и время
 Name[sl]=Čas in datum
+Name[sr]=Време и датум
+Name[sr@ijekavian]=Вријеме и датум
+Name[sr@ijekavianlatin]=Vrijeme i datum
+Name[sr@latin]=Vreme i datum
 Name[sv]=Tid och datum
 Name[th]=เวลาและวันที่
 Name[tr]=Saat ve Tarih
@@ -97,6 +101,10 @@ Comment[pt_BR]=Configuração de data e hora do KOrganizer
 Comment[ro]=Configurare oră și dată KOrganizer
 Comment[ru]=Настройка даты и времени
 Comment[sl]=Nastavitev časa in datuma v KOrganizerju
+Comment[sr]=Подешавање времена и датума у К‑организатору
+Comment[sr@ijekavian]=Подешавање времена и датума у К‑организатору
+Comment[sr@ijekavianlatin]=Podešavanje vremena i datuma u K‑organizatoru
+Comment[sr@latin]=Podešavanje vremena i datuma u K‑organizatoru
 Comment[sv]=Inställning av Korganizers tid och datum
 Comment[tr]=KOrganizer Tarih ve Saat Yapılandırması
 Comment[uk]=Налаштування часу і дати в KOrganizer
