--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -47,6 +47,10 @@ Name[pt_BR]=Cliente de lembretes do KOrganizer
 Name[ru]=Уведомления KOrganizer
 Name[sk]=Klient pripomienok pre KOrganizer
 Name[sl]=Odjemalec za opomnik KOrganizerja
+Name[sr]=Клијент подсетника К‑организатора
+Name[sr@ijekavian]=Клијент подсјетника К‑организатора
+Name[sr@ijekavianlatin]=Klijent podsjetnika K‑organizatora
+Name[sr@latin]=Klijent podsetnika K‑organizatora
 Name[sv]=Korganizers påminnelseklient
 Name[tr]=KOrganizer Anımsatıcı İstemcisi
 Name[uk]=Клієнт нагадувань KOrganizer
@@ -102,6 +106,10 @@ GenericName[pt_BR]=Cliente do servidor de lembretes do KOrganizer
 GenericName[ru]=Клиент службы уведомлений KOrganizer
 GenericName[sk]=Klient KOrganizer pre démona pripomienok
 GenericName[sl]=Pritajeni odjemalec za opomnik KOrganizerja
+GenericName[sr]=Клијент демона подсетника у К‑организатору
+GenericName[sr@ijekavian]=Клијент демона подсјетника у К‑организатору
+GenericName[sr@ijekavianlatin]=Klijent demona podsjetnika u K‑organizatoru
+GenericName[sr@latin]=Klijent demona podsetnika u K‑organizatoru
 GenericName[sv]=Korganizers alarmdemonklient
 GenericName[tr]=KOrganizer Anımsatıcı Servisi İstemcisi
 GenericName[uk]=Фонова служба клієнта нагадування для KOrganizer
