--- a/korganizer_part.desktop
+++ b/korganizer_part.desktop
@@ -52,6 +52,10 @@ Comment[ru]=Органайзер
 Comment[se]=Kaleandar- ja plánenprográmma
 Comment[sk]=Kalendár a plánovací program
 Comment[sl]=Program za koledar in razporejanje
+Comment[sr]=Календарски и планерски програм
+Comment[sr@ijekavian]=Календарски и планерски програм
+Comment[sr@ijekavianlatin]=Kalendarski i planerski program
+Comment[sr@latin]=Kalendarski i planerski program
 Comment[sv]=Kalender- och schemaläggningsprogram
 Comment[ta]=நாள்காட்டி மற்றும் திட்ட நிரல்
 Comment[tg]=Тақвимот ва ҷадвали шахсӣ
@@ -118,6 +122,10 @@ Name[ru]=KOrganizer
 Name[se]=KOrganizer
 Name[sk]=KOrganizer
 Name[sl]=KOrganizer
+Name[sr]=К‑организатор
+Name[sr@ijekavian]=К‑организатор
+Name[sr@ijekavianlatin]=K‑organizator
+Name[sr@latin]=K‑organizator
 Name[sv]=Korganizer
 Name[ta]=கேஅமைப்பாளர்
 Name[tg]=KOrganizer
