--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -46,6 +46,10 @@ Name[pt_BR]=Estilo de impressão "A seguir"
 Name[ru]=Предстоящие события и задачи
 Name[sk]=Štýl tlače Čo nasleduje
 Name[sl]=Slog tiskanja v obliki »Kaj je naslednje«
+Name[sr]=Стил штампања „шта је следеће“
+Name[sr@ijekavian]=Стил штампања „шта је следеће“
+Name[sr@ijekavianlatin]=Stil štampanja „šta je sledeće“
+Name[sr@latin]=Stil štampanja „šta je sledeće“
 Name[sv]=Vad står på tur-utskriftsstil
 Name[ta]=அடுத்டு என்ன அச்சுப் பாணி
 Name[tr]=Sıradaki Nedir Yazdırma Tarzı
@@ -96,6 +100,10 @@ Comment[pt_BR]=Este plug-in permite-lhe imprimir uma lista de todos os próximos
 Comment[ru]=Этот модуль позволяет печатать список предстоящих событий и задач.
 Comment[sk]=Tento modul umožní vytlačiť zoznam všetkých nadchádzajúcich udalostí a úloh.
 Comment[sl]=Ta vstavek vam omogoča natis seznama vseh prihodnjih dogodkov in čakajočih opravil.
+Comment[sr]=Помоћу овог прикључка можете да одштампате списак свих наступајућих догађаја и обавеза.
+Comment[sr@ijekavian]=Помоћу овог прикључка можете да одштампате списак свих наступајућих догађаја и обавеза.
+Comment[sr@ijekavianlatin]=Pomoću ovog priključka možete da odštampate spisak svih nastupajućih događaja i obaveza.
+Comment[sr@latin]=Pomoću ovog priključka možete da odštampate spisak svih nastupajućih događaja i obaveza.
 Comment[sv]=Det här insticksprogrammet gör att du kan skriva ut en lista med alla kommande händelser och uppgifter.
 Comment[ta]=இந்த சொருகுப்பொருள் ஒரு வரப்போகும் நிகழ்வுகளின் பட்டியல் மற்றும் செய்யவேண்டியவைகளை அச்சிட உங்களை அனுமதிக்கிறது.
 Comment[tr]=Bu eklenti, sıradaki olayları ve yapılacaklar listesini bir liste biçiminde yazdırmanızı sağlar.
