SVN_SILENT made messages (.desktop file)

--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -28,7 +28,7 @@ Name[nds]=KOrganizer-Komponent-Koppelsteed
 Name[nl]=KOrganizer-componentuiterlijk
 Name[nn]=Grensesnitt til KOrganizer-del
 Name[pa]=ਕੇ-ਪਰਬੰਧਕ ਭਾਗ ਇੰਟਰਫੇਸ
-Name[pl]=Moduł KOrganizera
+Name[pl]=Moduł interfejsu KOrganizera
 Name[pt]=Interface de Componente do KOrganizer
 Name[pt_BR]=Interface do componente do KOrganizer
 Name[ro]=Interfață Componentă KOrganizer
