--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -20,6 +20,7 @@ Name[nb]=Påminnelsesnisse
 Name[nds]=Anstötendämoon
 Name[nl]=Herinneringsdaemon
 Name[pa]=ਰੀਮਾਈਡਰ ਡੈਮਨ
+Name[pl]=Demon przypominania
 Name[pt]=Servidor de Chamadas de Atenção
 Name[pt_BR]=Servidor de Lembretes
 Name[sl]=Pritajeni program za opomnike
@@ -51,6 +52,7 @@ Comment[lt]=Įvykių ir užduočių priminimų tarnyba
 Comment[nb]=Nisse for påminnelser om hendelser og oppgaver
 Comment[nds]=Anstötendämoon för Begeefnissen un Opgaven
 Comment[nl]=Herinneringsdaemon voor evenementen en taken
+Comment[pl]=Demon przypominania zdarzeń i zadań
 Comment[pt]=Servidor de chamada de atenção dos eventos e tarefas
 Comment[pt_BR]=Servidor de lembretes dos eventos e tarefas
 Comment[sl]=Pritajeni program za opomnike glede dogodkov in opravil
