SVN_SILENT made messages (.desktop file)

--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -37,7 +37,7 @@ Name[ms]=Plugin Bilangan Tarikh untuk Kalendar
 Name[nb]=Datonummer programtillegg for Kalender
 Name[nds]=Kalennerdag-Moduul för Kalenners
 Name[ne]=क्यालेन्डरका लागि मिति सङ्ख्या प्लगइन
-Name[nl]=Datumgetallenplugin voor agenda's
+Name[nl]=Datumgetallenplug-in voor agenda's
 Name[nn]=Kalender-programtillegg for datonummer
 Name[pa]=ਕੈਲੰਡਰਾਂ ਲਈ ਮਿਤੀ ਨੰਬਰ ਪਲੱਗਇਨ
 Name[pl]=Wtyczka numerów dni dla Kalendarzy
@@ -91,7 +91,7 @@ Comment[ms]=Setiap hari plugin ini memaparkan  bilangan hari tahun tersebut di a
 Comment[nb]=For hver dag viser dette programtillegget dagens nummer i året øverst på dagsvisningen. 1. februar er f.eks. dag nr. 32 i året.
 Comment[nds]=Dit Moduul wiest för elkeen Dag sien Nummer in't Johr baven de Dagansicht. De 1. Februor is t.B. de 32. Dag vun't Johr.
 Comment[ne]=प्रत्येक दिनका लागि यो प्लगइनले एजेन्डा दृश्यको माथि यस वर्षको दिन नम्बर देखाउछ । उदारणका लागि, फेब्रुवरी १ वर्षको बत्तिसौ दिन हो ।
-Comment[nl]=Deze plugin zorgt ervoor dat het dagnummer boven de agendaweergave wordt geplaatst. Bijvoorbeeld, bij 1 februari hoort dagnummer 32.
+Comment[nl]=Deze plug-in zorgt ervoor dat het dagnummer boven de agendaweergave wordt geplaatst. Bijvoorbeeld, bij 1 februari hoort dagnummer 32.
 Comment[nn]=For kvar dag vil dette programtillegget visa nummeret til denne dagen i året øvst i tidsplanen. For eksempel vert 1. februar vist som dag 32.
 Comment[pl]=Ta wtyczka dla każdego dnia pokazuje jego numer kolejny w roku, na szczycie widoku planu. Na przykład, 1 luty to 32 dzień roku.
 Comment[pt]=Para cada dia, este 'plugin' mostra o seu número de dia do ano no topo da agenda. Por exemplo, o dia 1 de Fevereiro é o dia 32 do ano.
