--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -39,7 +39,7 @@ Name[ms]=PLugin Kalender Yahudi
 Name[nb]=Programtillegg for jødisk kalender
 Name[nds]=Moduul för juudschen Kalenner
 Name[ne]=यहूदी क्यालेन्डर प्लगइन
-Name[nl]=Joodse kalenderplugin
+Name[nl]=Joodse kalenderplug-in
 Name[nn]=Kalender-programtillegg for jødisk kalender
 Name[pl]=Wtyczka kalendarza żydowskiego
 Name[pt]='Plugin' do Calendário Judeu
