--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -29,7 +29,7 @@ Name[lv]=Wikipedia dienas attēla kalendāru spraudnis
 Name[nb]=Wikipedia Dagens Bilde programtillegg for Kalender
 Name[nds]=Wikipedia-"Bild för Vundaag"-Moduul för Kalenners
 Name[ne]=क्यालेन्डरका लागि दिनको प्लगइनको विकिपेडिया तस्वीर
-Name[nl]=KOrganizer-plugin voor de Wikipedia Afbeelding van de Dag
+Name[nl]=KOrganizer-plug-in voor de Wikipedia Afbeelding van de Dag
 Name[nn]=Kalender-programtillegg for dagens bilete frå Wikipedia
 Name[pa]=ਕੈਲੰਡਰ ਲਈ ਦਿਨ ਦੀ ਵਿਕਿਪੀਡਿਆ ਤਸਵੀਰ ਪਲੱਗਇਨ
 Name[pl]=Grafika na medal z Wikipedii
@@ -73,7 +73,7 @@ Comment[lt]=Šis įskiepis pateikia Wikipedijos dienos nuotrauką
 Comment[lv]=Šis spraudnis piegādā Vikipēdijas dienas attēlu
 Comment[nb]=Dette programtillegget henter Wikipedias Dagens bilde
 Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
-Comment[nl]=Deze plugin geeft de Wikipedia-afbeelding van de dag
+Comment[nl]=Deze plug-in geeft de Wikipedia-afbeelding van de dag
 Comment[nn]=Dette programtillegget viser dagens bilete frå Wikipedia.
 Comment[pl]=Wtyczka dostarcza Obrazek Dnia Wikipedii
 Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
