--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -92,7 +92,7 @@ Comment[ms]=Plugin ini membenarkan anda mencetak entri jurnal  (entri diari).
 Comment[nb]=Med dette programtillegget kan du skrive ut oppføringer (dagsnotater) fra dagboka.
 Comment[nds]=Mit dit Moduul köönt Daagbook-Indrääg utdruckt warrn.
 Comment[ne]=यो प्लगइनले तपाईँलाई जर्नल प्रविष्टि मुद्रण गर्न अनुमति दिन्छ (दैनिक विवरण प्रविष्टि) ।
-Comment[nl]=Deze plugin maakt het mogelijk om journalen uit te printen (dagboekitems).
+Comment[nl]=Deze plug-in maakt het mogelijk om journalen uit te printen (dagboekitems).
 Comment[nn]=Dette programtillegget lèt deg skriva ut dagboktekstar.
 Comment[pl]=Ta wtyczka pozwala drukować wpisy dziennika.
 Comment[pt]=Este diário permite-lhe imprimir os itens de diário.
