--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -91,7 +91,7 @@ Comment[ms]=Plugin ini membenarkan anda mencetak peristiwa dan tugasan dalam bor
 Comment[nb]=Med dette programtillegget kan du skrive ut hendelser og gjørelister på liste-form.
 Comment[nds]=Mit dit Moduul köönt Begeefnissen un Opgaven as Listen utdruckt warrn.
 Comment[ne]=यो प्लगइनले तपाईँलाई घटना मुद्रण गर्न र सूची फारममा गर्नुपर्ने कार्य गर्न अनुमति दिन्छ ।
-Comment[nl]=Deze plugin maakt het mogelijk om evenementen en taken in lijstvorm uit te printen.
+Comment[nl]=Deze plug-in maakt het mogelijk om evenementen en taken in lijstvorm uit te printen.
 Comment[nn]=Dette programtillegget lèt deg skriva ut hendingar og hugselister på listeform.
 Comment[pl]=Ta wtyczka pozwala drukować zdarzenia i zadania w postaci listy.
 Comment[pt]=Este 'plugin' permite-lhe imprimir os eventos e os itens por-fazer no formato de uma lista.
