--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -91,7 +91,7 @@ Comment[ms]=Plugin ini membenarkan anda mencetak senarai semua peristiwa dan tug
 Comment[nb]=Med dette programtillegget kan du skrive ut en liste over kommende hendelser og ting som skal gjøres.
 Comment[nds]=Mit dit Moduul kann en List vun de direktemang nakamen Begeefnissen un Opgaven utdruckt warrn.
 Comment[ne]=यो प्लगइनले तपाईँलाई सबै पछि हुने घटना र गर्नुपर्ने कार्यको सूचीको मुद्रण गर्न अनुमति दिन्छ ।
-Comment[nl]=Deze plugin maakt het mogelijk om een lijst van alle komende evenementen en taken uit te printen.
+Comment[nl]=Deze plug-in maakt het mogelijk om een lijst van alle komende evenementen en taken uit te printen.
 Comment[nn]=Dette programtillegget lèt deg skriva ut ei liste over alle dei kommande hendingane og oppgåvene i hugselista.
 Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਤੁਹਾਨੂੰ ਸਭ ਆ ਰਹੇ ਈਵੈਟਾਂ ਅਤੇ ਟੂ-ਡੂ ਦੀ ਲਿਸਟ ਪਰਿੰਟ ਕਰਨ ਲਈ ਸਹਾਇਕ ਹੈ।
 Comment[pl]=Ta wtyczka pozwala wydrukować wszystkie przyszłe zdarzenia i zadania.
