--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -27,7 +27,7 @@ Name[lv]=Wikipedia 'Šī diena vēsturē' spraudnis
 Name[nb]=Programtillegg for Wikipedias «Denne dag i historien»
 Name[nds]=Wikipedia-"Disse Dag in de Historie"-Moduul
 Name[ne]=विकिपेडिया 'इतिहासमा यो दिन' प्लगइन
-Name[nl]=Plugin voor Wikipedia 'Deze dag in het verleden'
+Name[nl]=Plug-in voor Wikipedia 'Deze dag in het verleden'
 Name[nn]=Programtillegg for «Dagen i dag» frå Wikipedia
 Name[pa]=ਵਿਕਿਪੀਡਿਆ 'ਇਤਹਾਸ ਵਿੱਚ ਅੱਜ ਦਾ ਦਿਨ' ਪਲੱਗਇਨ
 Name[pl]=Wtyczka Wikipedii 'Wybrane rocznice'
@@ -69,7 +69,7 @@ Comment[lt]=Šis įskiepis suteikia nuorodas į Wikipedijos „Ši diena istorij
 Comment[lv]=Šis spraudnis pievieno saites uz Vikipēdijas 'Šī diena vēsturē' lapām
 Comment[nb]=Dette programtillegget gir lenker til «This day in History» på engelsk Wikipedia.
 Comment[nds]=Dit Moduul stellt Links na de »Disse Dag in de Historie«-Sieden op Wikipedia praat
-Comment[nl]=Deze plugin levert links tot de Wikipedia-pagina's over een bepaalde dag
+Comment[nl]=Deze plug-in levert links tot de Wikipedia-pagina's over een bepaalde dag
 Comment[nn]=Dette programtillegget gjev lenkjer til «Dagen i dag» i Wikipedia
 Comment[pa]=ਇਹ ਪਲੱਗਇਨ ਵਿਕਿਪੀਡਿਆ 'ਇਤਹਾਸ ਵਿੱਚ ਅੱਜ ਦਾ ਦਿਨ' ਲਈ ਲਿੰਕ ਦਿੰਦੀ ਹੈ।
 Comment[pl]=Wtyczka dostarcza linki do stron 'Ten dzień w historii' Wikipedii
