--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -55,7 +55,7 @@ Name[ms]=Plugin
 Name[nb]=Programtillegg
 Name[nds]=Modulen
 Name[ne]=प्लगइन
-Name[nl]=Plugins
+Name[nl]=Plug-ins
 Name[nn]=Programtillegg
 Name[oc]=Ajustons
 Name[pa]=ਪਲੱਗਇਨਾਂ
@@ -121,7 +121,7 @@ Comment[ms]=Konfigurasi Plugin KOrganizer
 Comment[nb]=KOrganizer oppsett for programtillegg
 Comment[nds]=Modulen för KOrganizer instellen
 Comment[ne]=केडीई आयोजक प्लगइन कन्फिगरेसन
-Comment[nl]=KOrganizer plugininstellingen
+Comment[nl]=KOrganizer plug-ininstellingen
 Comment[nn]=Oppsett av KOrganizer-programtillegg
 Comment[pa]=ਕੇ-ਪਰਬੰਧਕ ਪਲੱਗਇਨ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja wtyczek KOrganizera
