SVN_SILENT made messages (.desktop file)

--- a/korganizer-import.desktop
+++ b/korganizer-import.desktop
@@ -132,6 +132,7 @@ Name[sv]=Korganizer
 Name[ta]=கேஅமைப்பாளர்
 Name[tg]=KOrganizer
 Name[tr]=KOrganizer
+Name[ug]=KOrganizer
 Name[uk]=KOrganizer
 Name[vi]=KOrganizer
 Name[xh]=KOrganizer
