SVN_SILENT made messages (.desktop file)

--- a/interfaces/korganizer/korganizerpart.desktop
+++ b/interfaces/korganizer/korganizerpart.desktop
@@ -11,6 +11,7 @@ Name[el]=Διασύνδεση KOrganizer Part
 Name[en_GB]=KOrganizer Part Interface
 Name[es]=Interfaz de parte de KOrganizer
 Name[et]=KOrganizeri komponendi liides
+Name[fi]=KOrganizer-osaliittymä
 Name[fr]=Interface de composant KOrganizer
 Name[ga]=Comhéadan Comhpháirte KOrganizer
 Name[gl]=Interface da Parte KOrganizer
@@ -65,7 +66,7 @@ Comment[es]=Parte de KOrganizer
 Comment[et]=KOrganizeri komponent
 Comment[eu]=KOrganizer zatia
 Comment[fa]=بخش KOrganizer
-Comment[fi]=KOrganizer Part
+Comment[fi]=KOrganizer-osa
 Comment[fr]=Composant KOrganizer
 Comment[fy]=KOrganizer Part
 Comment[ga]=Comhpháirt KOrganizer
