--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -11,6 +11,7 @@ Name[el]=Διεπαφή προσθέτου εκτύπωσης KOrganizer
 Name[en_GB]=KOrganizer Print Plugin Interface
 Name[es]=Interfaz del complemento de impresión de KOrganizer
 Name[et]=KOrganizeri trükkimisplugina liides
+Name[fi]=KOrganizerin tulostusliitännäisliittymä
 Name[fr]=Interface de module d'impression d'agenda
 Name[ga]=Comhéadan Breiseáin Priontála KOrganizer
 Name[gl]=Interface do Engadido de Impresión de KOrganizer
@@ -64,7 +65,7 @@ Comment[es]=Parte de KOrganizer
 Comment[et]=KOrganizeri komponent
 Comment[eu]=KOrganizer zatia
 Comment[fa]=بخش KOrganizer
-Comment[fi]=KOrganizer Part
+Comment[fi]=KOrganizer-osa
 Comment[fr]=Composant KOrganizer
 Comment[fy]=KOrganizer Part
 Comment[ga]=Comhpháirt KOrganizer
