--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -31,7 +31,7 @@ Name[es]=Libre/Ocupado
 Name[et]=Vaba/hõivatud
 Name[eu]=Libre/Lanpetuta
 Name[fa]=آزاد/اشغال
-Name[fi]=Vapaa/Varattu
+Name[fi]=Varaustiedot
 Name[fr]=Disponibilité
 Name[fy]=Frij/beset
 Name[ga]=Saor/Gafa
