--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -17,7 +17,7 @@ Name[es]=Cliente de recordatorio de KOrganizer
 Name[et]=KOrganizeri meeldetuletuse klientprogramm
 Name[eu]=KOrganizer-en oroigarrien bezeroa
 Name[fa]=کارخواه یادآوری‌کنندۀ KOrganizer
-Name[fi]=KOrganizer-hälytysasiakas
+Name[fi]=KOrganizer-muistutusasiakas
 Name[fr]=Client d'alarme de KOrganizer
 Name[fy]=KOrganizer omtinkerdaemon
 Name[ga]=Cliant Meabhrúchán KOrganizer
@@ -77,7 +77,7 @@ GenericName[es]=Cliente del demonio de recordatorio de KOrganizer
 GenericName[et]=KOrganizeri meeldetuletusdeemoni klientprogramm
 GenericName[eu]=KOrganizer-en oroigarrien deabruaren bezeroa
 GenericName[fa]=کارخواه شبح یادآوری KOrganizer
-GenericName[fi]=KOrganizer hälytyspalvelimen asiakas
+GenericName[fi]=KOrganizer-muistutuspalveluasiakas
 GenericName[fr]=Client pour le démon d'alarme de KOrganizer
 GenericName[fy]=KOrganizer omtinkerdaemon
 GenericName[ga]=Cliant Deamhain Meabhrúchán KOrganizer
