--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -7,6 +7,7 @@ Name[de]=Erinnerungsmodul
 Name[en_GB]=Reminder Dæmon
 Name[es]=Demonio de recordatorio
 Name[et]=Meeldetuletuste deemon
+Name[fi]=Muistutuspalvelu
 Name[fr]=Démon d'alarme
 Name[gl]=Daemon do servizo de lembranzas
 Name[hr]=Podsjetnik
@@ -41,6 +42,7 @@ Comment[de]=Erinnerungsdienst für Ereignisse und Termine
 Comment[en_GB]=Event and task reminder dæmon
 Comment[es]=Demonio de recordatorio de eventos y tareas
 Comment[et]=Sündmuste ja ülesannete meeldetuletuste deemon
+Comment[fi]=Tapahtuma- ja tehtävämuistutuspalvelu
 Comment[fr]=Démon de rappel des tâches et évènements
 Comment[gl]=Daemon que lembra de eventos e tarefas
 Comment[hr]=Servis za događanja i podsjetnik na zadatke
