--- a/korganizer.desktop
+++ b/korganizer.desktop
@@ -18,7 +18,7 @@ Comment[es]=Calendario y planificador
 Comment[et]=Kalendri ja ajakava haldamise rakendus
 Comment[eu]=Egutegi eta antolaketa progrmaa
 Comment[fa]=تقویم و برنامۀ زمان‌بندی
-Comment[fi]=Kalenteri ja ajanhallintaohjelma
+Comment[fi]=Kalenteri ja ajanhallinta
 Comment[fr]=Calendrier et agenda personnel
 Comment[fy]=Aginda- en Ã´fsprakenprogramma
 Comment[ga]=Ríomhchlár Sceidealta/Féilire
@@ -157,7 +157,7 @@ GenericName[es]=Organizador personal
 GenericName[et]=Personaalne ajaarvestus
 GenericName[eu]=Antolatzaile pertsonala
 GenericName[fa]=سازمان‌دهندۀ شخصی
-GenericName[fi]=Henkilökohtainen ajanhallintaohjelma
+GenericName[fi]=Henkilökohtainen ajanhallinta
 GenericName[fr]=Organiseur personnel
 GenericName[fy]=Persoanlike organizer
 GenericName[ga]=Eagraí Pearsanta
