--- a/korganizer_part.desktop
+++ b/korganizer_part.desktop
@@ -18,7 +18,7 @@ Comment[es]=Calendario y planificador
 Comment[et]=Kalendri ja ajakava haldamise rakendus
 Comment[eu]=Egutegi eta antolaketa progrmaa
 Comment[fa]=تقویم و برنامۀ زمان‌بندی
-Comment[fi]=Kalenteri ja ajanhallintaohjelma
+Comment[fi]=Kalenteri ja ajanhallinta
 Comment[fr]=Calendrier et agenda personnel
 Comment[fy]=Aginda- en Ã´fsprakenprogramma
 Comment[ga]=Ríomhchlár Sceidealta/Féilire
