SVN_SILENT made messages (.desktop file)

--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -70,6 +70,7 @@ Name[sv]=Gruppschemaläggning
 Name[ta]=குழு திட்ட வரையறை
 Name[tg]=Ҷадвали гурӯҳҳо
 Name[tr]=Group Zamanlama
+Name[ug]=گۇرۇپپا پىلانى
 Name[uk]=Розклад груп
 Name[x-test]=xxGroup Schedulingxx
 Name[zh_CN]=组日程安排
