--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -2,6 +2,7 @@
 Name=Reminder Daemon
 Name[ca]=Dimoni de recordatoris
 Name[ca@valencia]=Dimoni de recordatoris
+Name[cs]=Démon upomínek
 Name[da]=Påmindelsedæmon
 Name[de]=Erinnerungsmodul
 Name[en_GB]=Reminder Dæmon
@@ -37,6 +38,7 @@ Name[zh_TW]=提醒守護程式
 Comment=Event and task reminder daemon
 Comment[ca]=Dimoni de recordatoris de tasques i esdeveniments
 Comment[ca@valencia]=Dimoni de recordatoris de tasques i esdeveniments
+Comment[cs]=Démon upomínek na události a úkoly
 Comment[da]=Påmindelsedæmon til begivenheder og opgaver
 Comment[de]=Erinnerungsdienst für Ereignisse und Termine
 Comment[en_GB]=Event and task reminder dæmon
