SVN_SILENT made messages (.desktop file)

--- a/korgac/korgacagent.desktop
+++ b/korgac/korgacagent.desktop
@@ -12,6 +12,7 @@ Name[fi]=Muistutuspalvelu
 Name[fr]=Démon d'alarme
 Name[gl]=Daemon do servizo de lembranzas
 Name[hr]=Podsjetnik
+Name[hu]=Emlékeztető démon
 Name[ia]=Demone de Memento
 Name[it]=Demone degli avvisi
 Name[ja]=リマインダデーモン
@@ -48,6 +49,7 @@ Comment[fi]=Tapahtuma- ja tehtävämuistutuspalvelu
 Comment[fr]=Démon de rappel des tâches et évènements
 Comment[gl]=Daemon que lembra de eventos e tarefas
 Comment[hr]=Servis za događanja i podsjetnik na zadatke
+Comment[hu]=Esemény- és feladatemlékeztető démon
 Comment[ia]=Demone de memento pro carga e evento
 Comment[it]=Demone degli avvisi di eventi e attività
 Comment[kk]=Оқиға мен тапсырма туралы еске салу қызметі
