--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -139,3 +139,6 @@ Comment[x-test]=xxKOrganizer Free/Busy Configurationxx
 Comment[zh_CN]=KOrganizer 空闲/忙碌配置
 Comment[zh_TW]=KOrganizer 行程資訊設定
 X-KDE-Keywords=korganizer,freebusy,scheduling
+X-KDE-Keywords[hu]=korganizer,szabadelfoglalt,ütemezés
+X-KDE-Keywords[uk]=korganizer,freebusy,scheduling,вільний,зайнятий,план,планування
+X-KDE-Keywords[x-test]=xxkorganizer,freebusy,schedulingxx
