--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -136,3 +136,8 @@ Comment[x-test]=xxKOrganizer Group Scheduling Configurationxx
 Comment[zh_CN]=Korganizer 组日程安排配置
 Comment[zh_TW]=KOrganizer 群組排程設定
 X-KDE-Keywords=korganizer,group,scheduling
+X-KDE-Keywords[hu]=korganizer,csoport,ütemezés
+X-KDE-Keywords[ia]=korganizer, gruppo,  planification
+X-KDE-Keywords[sv]=korganizer,grupp,schemaläggning
+X-KDE-Keywords[uk]=korganizer,group,scheduling,група,планування,групи
+X-KDE-Keywords[x-test]=xxkorganizer,group,schedulingxx
