--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -148,3 +148,9 @@ Comment[x-test]=xxKOrganizer Main Configurationxx
 Comment[zh_CN]=KOrganizer 主要配置
 Comment[zh_TW]=KOrganizer 主設定
 X-KDE-Keywords=korganizer,main
+X-KDE-Keywords[hu]=korganizer,alap
+X-KDE-Keywords[ia]=korganizer, principal
+X-KDE-Keywords[pt_BR]=korganizer,principal
+X-KDE-Keywords[sv]=korganizer,huvudinställning
+X-KDE-Keywords[uk]=korganizer,main,основа,основна,головна,головний
+X-KDE-Keywords[x-test]=xxkorganizer,mainxx
