--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -145,3 +145,9 @@ Comment[x-test]=xxKOrganizer View Configurationxx
 Comment[zh_CN]=KOrganizer 视图配置
 Comment[zh_TW]=KOrganizer 檢視設定
 X-KDE-Keywords=korganizer,view
+X-KDE-Keywords[hu]=korganizer,nézet
+X-KDE-Keywords[ia]=korganizer,vista
+X-KDE-Keywords[pt_BR]=korganizer,vsualizar
+X-KDE-Keywords[sv]=korganizer,vy
+X-KDE-Keywords[uk]=korganizer,view,перегляд
+X-KDE-Keywords[x-test]=xxkorganizer,viewxx
