--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -108,3 +108,8 @@ Comment[x-test]=xxKOrganizer Colors and Fonts Configurationxx
 Comment[zh_CN]=KOrganizer 颜色和字体配置
 Comment[zh_TW]=KOrganizer 顏色與字型設定
 X-KDE-Keywords=korganizer,colors,fonts
+X-KDE-Keywords[hu]=korganizer,színek,betűtípusok
+X-KDE-Keywords[ia]=korganizer,colores,fonts
+X-KDE-Keywords[pt_BR]=korganizer,cores,fontes
+X-KDE-Keywords[uk]=korganizer,colors,fonts,кольори,колір,шрифт,шрифти
+X-KDE-Keywords[x-test]=xxkorganizer,colors,fontsxx
